<resources>
    <string name="app_name">UD5_Products</string>
    <string name="tv_name">Name</string>
    <string name="tv_price_text">Price</string>
    <string name="tv_amountWarning_text">Last units</string>
    <string name="iv_product_image_description">Product image</string>
    <string name="tv_description_text">Description</string>
    <string name="tv_discount_price_text">Discount price</string>
    <string name="tv_price_text2">Price:</string>
    <string name="tv_discount_price_text2">Discount Price:</string>
    <string name="tv_amount_text">Total Units:</string>
    <string name="tv_detail_amount_text">Units</string>
    <string name="tv_availability_text">Availability:</string>
    <string name="tv_detail_availability">Availability</string>
    <string name="tit_search_hint">Search by name</string>
</resources>