<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="220dp">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="121dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/iv_product_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="178dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:lines="2"
        android:text="@string/tv_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_image"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/iv_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="82dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_price_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_amountWarning"
        android:layout_width="178dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_amountWarning_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_price"
        app:layout_constraintStart_toStartOf="@+id/tv_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_price" />
</androidx.constraintlayout.widget.ConstraintLayout>